--- a/Eclipse/Eclipse.html
+++ b/Eclipse/Eclipse.html
@@ -1,6 +1,6 @@
 
 <html>
-<script src="http://www.blogfa.com/ad/ad.ashx/636096435552321250" async="true" type="text/javascript" ></script>
+<script src="http://www.blogfa.com/ad/?5885232384992998" async="true" type="text/javascript" ></script>
 
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -40,9 +40,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <center><div class="theme-designer-com_makan_search">
 <div class="search">
 <form method="Get" target="_self" action="http://google.com/search" class="sch"><input name="sitesearch" value="" type="hidden"><html>
-<input type="text" name="q" size="50" class="txt" " placeholder="Search"  >&nbsp;&nbsp;
-<button class="button button--antiman button--round-l button--text-medium"><i class="button__icon icon icon-plus"></i><span>Search</span></button>
-
+<input type="text" name="q" size="50" class="txt" " placeholder="Search"  >&nbsp;&nbsp;<input type="submit" value="Search" class="myButton">
 </form>
 </div>
 </div></center>
@@ -82,7 +80,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
        .txt { border-width:1px; border-color:#cccccc; border-style:solid; padding:20px; font-size:20px; text-shadow:0px 0px 3px rgba(42,42,42,.66); font-weight:normal; font-style:none; font-family:serif;  }
 		 .css-input:focus { outline:none; }
       </style>
-
 
 
 <!---------------------------searchstyle------------------->
@@ -228,7 +225,7 @@ jQuery(function($){ // on DOM load
 	<li><a href="http://eclipseexplorer.blogfa.com/page/ver">Versions</a></li>
 	<li><a href="http://eclipseexplorer.blogfa.com/page/map">Map</a></li><br />
     <body>
-<li><b><a href="javascript:animatedcollapse.show(['jason', 'kelly', 'michael'])">▼</a> | <a href="javascript:animatedcollapse.hide(['jason', 'kelly', 'michael'])">▲</a></b></li>
+<li><b><a href="javascript:animatedcollapse.show(['jason', 'kelly', 'michael'])">More</a> | <a href="javascript:animatedcollapse.hide(['jason', 'kelly', 'michael'])">Less</a></b></li>
 
 <a href="javascript:animatedcollapse.toggle('jason')"></a>
 <div id="jason" style="width: 300px; background: #FFFFCC; display:none">
@@ -491,331 +488,6 @@ animatedcollapse.init();
 
 <!-----------------------Style button------------->
 
-<style>
-@import url(http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600);
-@font-face {
-	font-weight: normal;
-	font-style: normal;
-	font-family: 'codropsicons';
-	src: url("../fonts/codropsicons/codropsicons.eot");
-	src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("../fonts/codropsicons/codropsicons.woff") format("woff"), url("../fonts/codropsicons/codropsicons.ttf") format("truetype"), url("../fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
-}
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-.cf:before,
-.cf:after {
-	content: '';
-	display: table;
-}
-.cf:after {
-	clear: both;
-}
-body {
-	background: #FFFFFF;
-	color: #37474f;
-	font-weight: 400;
-	font-size: 1em;
-	font-family: 'Raleway', Arial, sans-serif;
-}
-.support {
-	font-weight: bold;
-	padding: 2em 0 0 0;
-	font-size: 1.4em;
-	color: #ee2563;
-	display: none;
-}
-a {
-	color: #7986cb;
-	text-decoration: none;
-	outline: none;
-}
-a:hover,
-a:focus {
-	color: #3f51b5;
-}
-.hidden {
-	position: absolute;
-	width: 0;
-	height: 0;
-	overflow: hidden;
-	pointer-events: none;
-}
-.container {
-	margin: 0 auto;
-	text-align: center;
-	overflow: hidden;
-}
-.content {
-	padding: 2em 1em 5em;
-	z-index: 1;
-	max-width: 1000px;
-	margin: 0 auto;
-}
-.content h2 {
-	margin: 0 0 2em;
-}
-.content p {
-	margin: 1em 0;
-	padding: 0 0 2em;
-	font-size: 0.85em;
-}
-.box {
-	padding: 4.5em 0;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	-webkit-justify-content: center;
-	justify-content: center;
-}
-
-/* Header */
-.codrops-header {
-	padding: 3em 190px 4em;
-	letter-spacing: -1px;
-}
-.codrops-header h1 {
-	font-weight: 200;
-	font-size: 4em;
-	line-height: 1;
-	margin-bottom: 0;
-}
-.codrops-header h1 span {
-	display: block;
-	font-size: 40%;
-	letter-spacing: 0;
-	padding: 0.5em 0 1em 0;
-	color: #A8B3B8;
-}
-
-/* Top Navigation Style */
-.codrops-links {
-	position: relative;
-	display: inline-block;
-	white-space: nowrap;
-	font-size: 1.25em;
-	text-align: center;
-}
-.codrops-links::after {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 1px;
-	height: 100%;
-	background: #BFCACF;
-	content: '';
-	-webkit-transform: rotate3d(0, 0, 1, 22.5deg);
-	transform: rotate3d(0, 0, 1, 22.5deg);
-}
-
-/* Related demos */
-.content--related {
-	text-align: center;
-	font-weight: 600;
-}
-.media-item {
-	display: inline-block;
-	padding: 1em;
-	margin: 1em 0 0 0;
-	vertical-align: top;
-	-webkit-transition: color 0.3s;
-	transition: color 0.3s;
-}
-.media-item__img {
-	opacity: 0.8;
-	max-width: 100%;
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-.media-item:hover .media-item__img,
-.media-item:focus .media-item__img {
-	opacity: 1;
-}
-.media-item__title {
-	font-size: 0.85em;
-	margin: 0;
-	padding: 0.5em;
-}
-@media screen and (max-width:50em) {
-	.codrops-header {
-		padding: 3em 10% 4em;
-	}
-}
-@media screen and (max-width:40em) {
-	.codrops-header h1 {
-		font-size: 2.8em;
-	}
-}
-
-</style>
-<style>
-
-/* Common button styles */
-.button {
-	float: left;
-	min-width: 150px;
-	max-width: 250px;
-	display: block;
-	margin: 1em;
-	padding: 1em 2em;
-	border: none;
-	background: none;
-	color: inherit;
-	vertical-align: middle;
-	position: relative;
-	z-index: 1;
-	-webkit-backface-visibility: hidden;
-	-moz-osx-font-smoothing: grayscale;
-}
-.button:focus {
-	outline: none;
-}
-.button > span {
-	vertical-align: middle;
-}
-
-/* Text color adjustments (we could stick to the "inherit" but that does not work well in Safari) */
-.bg-1 .button {
-	color: #37474f;
-	border-color: #37474f;
-}
-.bg-2 .button {
-	color: #ECEFF1;
-	border-color: #ECEFF1;
-}
-.bg-3 .button {
-	color: #fff;
-	border-color: #fff;
-}
-
-/* Sizes */
-.button--size-s {
-	font-size: 14px;
-}
-.button--size-m {
-	font-size: 16px;
-}
-.button--size-l {
-	font-size: 18px;
-}
-
-/* Typography and Roundedness */
-.button--text-upper {
-	letter-spacing: 2px;
-	text-transform: uppercase;
-}
-.button--text-thin {
-	font-weight: 300;
-}
-.button--text-medium {
-	font-weight: 500;
-}
-.button--text-thick {
-	font-weight: 600;
-}
-.button--round-s {
-	border-radius: 5px;
-}
-.button--round-m {
-	border-radius: 15px;
-}
-.button--round-l {
-	border-radius: 40px;
-}
-
-/* Borders */
-.button--border-thin {
-	border: 1px solid;
-}
-.button--border-medium {
-	border: 2px solid;
-}
-.button--border-thick {
-	border: 3px solid;
-}
-
-/* Individual button styles */
-
-
-/* Antiman */
-.button--antiman {
-	background: none;
-	border: none;
-	height: 60px;
-}
-.button--antiman.button--inverted,
-.button--antiman.button--inverted-alt {
-	-webkit-transition: color 0.3s;
-	transition: color 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-}
-.button--antiman > span {
-	padding-left: 0.35em;
-}
-.button--antiman::before,
-.button--antiman::after {
-	content: '';
-	z-index: -1;
-	border-radius: inherit;
-	pointer-events: none;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	-webkit-backface-visibility: hidden;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s, opacity 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-}
-.button--antiman::before {
-	border: 2px solid #37474f;
-	opacity: 0;
-	-webkit-transform: scale3d(1.2, 1.2, 1);
-	transform: scale3d(1.2, 1.2, 1);
-}
-.button--antiman.button--border-thin::before {
-	border-width: 1px;
-}
-.button--antiman.button--border-medium::before {
-	border-width: 2px;
-}
-.button--antiman.button--border-thick::before {
-	border-width: 3px;
-}
-.button--antiman.button--inverted::before {
-	border-color: #7986cb;
-}
-.button--antiman.button--inverted-alt::before {
-	border-color: #3f51b5;
-}
-
-.button--antiman.button--inverted-alt:hover {
-	color: #3f51b5;
-}
-.button--antiman:hover::before {
-	opacity: 1;
-	-webkit-transform: scale3d(1, 1, 1);
-	transform: scale3d(1, 1, 1);
-}
-.button--antiman:hover::after {
-	opacity: 0;
-	-webkit-transform: scale3d(0.8, 0.8, 1);
-	transform: scale3d(0.8, 0.8, 1);
-}
-
-</style>
-<style>
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;margin:0.67em 0;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:bold;}dfn{font-style:italic;}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em;}pre{white-space:pre-wrap;}q{quotes:"\201C" "\201D" "\2018" "\2019";}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-0.5em;}sub{bottom:-0.25em;}img{border:0;}svg:not(:root){overflow:hidden;}figure{margin:0;}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}legend{border:0;padding:0;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,select{text-transform:none;}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;}button[disabled],html input[disabled]{cursor:default;}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}
-</style>
 <!-----------------------Style button------------->
 
 
